# basic-clicker

./: CMakeLists.txt  README.md
src/: main.c  util.c  util.h
